--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-remark-images": "^3.3.0",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-source-medium": "^2.3.10",
     "gatsby-transformer-remark": "^2.8.0",
     "gatsby-transformer-sharp": "^2.5.0",
     "react": "^16.13.1",
