--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public -b master -r git@github.com:umairfarooq44/umairfarooq44.github.io.git",
+    "deploy": "npm run build && gh-pages -d public -b master -r git@github.com:umairfarooq44/umairfarooq44.github.io.git",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
